<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <Button
    android:id="@+id/open_dialog_0"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Concept Card 1" />

  <Button
    android:id="@+id/open_dialog_1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Concept Card 2" />
</LinearLayout>
