...
  <string name="cellular_data_alert_dialog_okay_button">OK</string>
  <string name="cellular_data_alert_dialog_cancel_button">Cancel</string>
  <string name="cellular_data_alert_dialog_title">Currently on Cellular Data</string>
  <string name="cellular_data_alert_dialog_description">Streaming audio may use a lot of cellular data.</string>
  <string name="cellular_data_alert_dialog_checkbox">Don\'t show this message again</string>
  <string name="concept_card_toolbar_title">Concept Card</string>
  <string name="concept_card_close_icon_description">Clicking on this will close the concept card.</string>
  <string name="revision_card_toolbar_title">Revision Card</string>
  <string name="stop_exploration_dialog_title">Leave to Topic Page?</string>
  <string name="stop_exploration_dialog_description">Your progress will not be saved.</string>
  <string name="stop_exploration_dialog_cancel_button">Cancel</string>
  <string name="stop_exploration_dialog_leave_button">Leave</string>
  <string name="topic_practice_master_these_skills">Master These Skills</string>
...
